Change faction from Anza to Alenezi

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="tag">Class: Quiet Strategist</div>
     <div class="tag">Level: 21</div>
     <div class="tag">Born: Dec 21</div>
-    <div class="tag">Faction: Anza (501)</div>
+    <div class="tag">Faction: Alenezi (501)</div>
 
 <pre>
 STATS
