--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
       box-shadow: 0 20px 40px var(--shadow);
       position: relative;
       overflow: hidden;
-
-      /* animate */
       animation: glow 3s infinite ease-in-out;
     }
 
@@ -62,11 +60,48 @@
       letter-spacing: 2px;
       color: var(--blue);
       text-transform: uppercase;
-      margin: 0 0 16px 0;
-
+      margin: 0 0 10px 0;
       animation: flicker 2.4s infinite;
       text-shadow: 0 0 14px rgba(46,168,255,.25);
+      position: relative;
+      z-index: 1;
     }
+
+    /* glitch layers (enabled via .glitch class) */
+    .title.glitch::before,
+    .title.glitch::after{
+      content: attr(data-text);
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      overflow: hidden;
+      opacity: .8;
+      pointer-events: none;
+    }
+    .title.glitch::before{
+      transform: translate(2px,0);
+      color: rgba(255, 80, 170, .85);
+      animation: glitchA .55s steps(2,end) 2;
+      clip-path: inset(0 0 55% 0);
+    }
+    .title.glitch::after{
+      transform: translate(-2px,0);
+      color: rgba(80, 255, 220, .85);
+      animation: glitchB .55s steps(2,end) 2;
+      clip-path: inset(45% 0 0 0);
+    }
+
+    /* tiny hint for sound */
+    .hint{
+      font-size: 10px;
+      color: rgba(169,192,223,.85);
+      margin-bottom: 14px;
+      position: relative;
+      z-index: 1;
+      user-select: none;
+    }
+    .hint b{ color: rgba(234,242,255,.95); font-weight: 400; }
 
     .tags{
       display:flex;
@@ -148,8 +183,6 @@
           rgba(255,255,255,.70) 10px 14px
         );
       box-shadow: 0 0 10px rgba(255,255,255,.12);
-
-      /* animate width */
       animation: loadBar 1.6s ease forwards;
     }
 
@@ -194,6 +227,34 @@
       border-radius: 10px;
       padding: 8px 10px;
       background: rgba(7,10,15,.25);
+      transition: transform .12s ease, box-shadow .12s ease;
+    }
+    .inv span:active{
+      transform: translateY(1px) scale(.99);
+      box-shadow: 0 0 0 2px rgba(46,168,255,.18);
+    }
+
+    /* SECRET unlock panel */
+    .secret{
+      display:none;
+      margin-top: 14px;
+      border:2px dashed rgba(46,168,255,.55);
+      border-radius: 14px;
+      padding: 14px;
+      background: rgba(46,168,255,.08);
+      animation: popIn .35s ease forwards;
+    }
+    .secret h2{ margin: 0 0 10px 0; }
+    .secret .mono{ opacity: .95; }
+    .pill{
+      display:inline-block;
+      padding: 8px 10px;
+      border: 2px solid rgba(46,168,255,.35);
+      border-radius: 999px;
+      background: rgba(7,10,15,.25);
+      margin-top: 10px;
+      font-size: 10px;
+      color: rgba(234,242,255,.95);
     }
 
     /* === ANIMATIONS === */
@@ -216,6 +277,22 @@
       to   { width: var(--level); }
     }
 
+    @keyframes popIn{
+      from { transform: translateY(6px); opacity: 0; }
+      to   { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes glitchA{
+      0% { transform: translate(2px,0); }
+      50%{ transform: translate(4px,-1px); }
+      100%{ transform: translate(1px,1px); }
+    }
+    @keyframes glitchB{
+      0% { transform: translate(-2px,0); }
+      50%{ transform: translate(-4px,1px); }
+      100%{ transform: translate(-1px,-1px); }
+    }
+
     /* responsive */
     @media (min-width: 860px){
       .grid{ grid-template-columns: 1.05fr .95fr; }
@@ -228,7 +305,8 @@
   <div class="wrap">
     <div class="card">
 
-      <h1 id="title" class="title">PLAYER DATA LOADING...</h1>
+      <h1 id="title" class="title" data-text="PLAYER DATA LOADING...">PLAYER DATA LOADING...</h1>
+      <div class="hint">🔊 Sound FX: <b>Tap anywhere once</b> to enable.</div>
 
       <div class="tags">
         <div class="tag"><b>Class:</b> Quiet Strategist</div>
@@ -279,6 +357,18 @@
           <ul>
             <li>Understands you even when you don’t explain</li>
           </ul>
+
+          <!-- SECRET UNLOCK (hidden first) -->
+          <div id="secretBox" class="secret">
+            <h2>Secret Unlock</h2>
+            <div class="mono">
+              <div><span class="muted">CODE NAME:</span> “No-words needed”</div>
+              <div><span class="muted">TRIGGER:</span> Silence + Rain + Coffee</div>
+              <div><span class="muted">EFFECT:</span> Calms down, thinks deeper, comes back sharper</div>
+              <div class="pill">👀 unlocked after 3s</div>
+            </div>
+          </div>
+
         </div>
 
         <!-- RIGHT -->
@@ -331,11 +421,70 @@
   </div>
 
   <script>
-    // Title loading -> loaded
+    // ---- Retro "click" sound (iOS-safe: plays after first user tap) ----
+    let audioUnlocked = false;
+
+    function makeClickSound(){
+      const ctx = new (window.AudioContext || window.webkitAudioContext)();
+      const o = ctx.createOscillator();
+      const g = ctx.createGain();
+
+      o.type = "square";
+      o.frequency.setValueAtTime(880, ctx.currentTime);
+      g.gain.setValueAtTime(0.0001, ctx.currentTime);
+
+      o.connect(g);
+      g.connect(ctx.destination);
+
+      // quick "tick"
+      g.gain.exponentialRampToValueAtTime(0.18, ctx.currentTime + 0.01);
+      g.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + 0.08);
+
+      o.start();
+      o.stop(ctx.currentTime + 0.09);
+
+      // close context shortly after
+      setTimeout(() => ctx.close(), 150);
+    }
+
+    function unlockAudioOnce(){
+      if (audioUnlocked) return;
+      audioUnlocked = true;
+      makeClickSound();
+      // optional: remove hint after unlock
+      const hint = document.querySelector(".hint");
+      if (hint) hint.textContent = "🔊 Sound FX: enabled.";
+      window.removeEventListener("pointerdown", unlockAudioOnce);
+      window.removeEventListener("touchstart", unlockAudioOnce);
+    }
+
+    window.addEventListener("pointerdown", unlockAudioOnce, { once: false });
+    window.addEventListener("touchstart", unlockAudioOnce, { once: false });
+
+    // ---- Title loading -> loaded + glitch punch ----
+    const title = document.getElementById("title");
+
     setTimeout(() => {
-      const el = document.getElementById("title");
-      if (el) el.textContent = "PLAYER DATA LOADED: YAZEED";
+      if (!title) return;
+      title.textContent = "PLAYER DATA LOADED: YAZEED";
+      title.setAttribute("data-text", title.textContent);
+
+      // glitch for a moment
+      title.classList.add("glitch");
+      setTimeout(() => title.classList.remove("glitch"), 800);
+
+      // small click if already unlocked
+      if (audioUnlocked) makeClickSound();
     }, 1400);
+
+    // ---- Secret unlock after 3 seconds ----
+    setTimeout(() => {
+      const box = document.getElementById("secretBox");
+      if (box){
+        box.style.display = "block";
+        if (audioUnlocked) makeClickSound();
+      }
+    }, 3000);
   </script>
 </body>
 </html>
